--- a/blog1.html
+++ b/blog1.html
@@ -104,7 +104,7 @@
                 </div>
                   <div class="card rounded p-4 my-5">
                     <div class="media">
-                      <img class="rounded-circle mr-3" src="/author_img/author.jpg" alt="Author avatar" style="width: 128px; height: 128px;">
+                      <img class="rounded-circle mr-3" src="/author_img/author.jpg" alt="Author avatar" style="width: 128px;">
                     <div class="media-body" style="margin-right: 30px;">
                       <h5 class="h5 text-light">Donasi untuk Penulis</h5>
                       <p class="text-light">Jika kamu suka dengan artikel ini , kamu bisa klik donasi dibawah
